@@ -16,7 +16,7 @@
  */
 package org.apache.solr.core.snapshots;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -92,7 +92,7 @@ public class TestSolrCoreSnapshots extends SolrCloudTestCase {
         CollectionAdminRequest.createCollection(collectionName, "conf1", 1, 1);
     create.process(solrClient);
 
-    String location = createTempDir().toFile().getAbsolutePath();
+    String location = createTempDir().toString();
     int nDocs = BackupRestoreUtils.indexDocs(cluster.getSolrClient(), collectionName, docsSeed);
 
     DocCollection collectionState = solrClient.getClusterState().getCollection(collectionName);
@@ -338,7 +338,7 @@ public class TestSolrCoreSnapshots extends SolrCloudTestCase {
   }
 
   private List<IndexCommit> listCommits(String directory) throws Exception {
-    Directory dir = new NIOFSDirectory(Paths.get(directory));
+    Directory dir = new NIOFSDirectory(Path.of(directory));
     try {
       return DirectoryReader.listCommits(dir);
     } catch (IndexNotFoundException ex) {
